# mapflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Justfile  LICENSE  MVP_SUMMARY.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TESTS.md  docker-compose.ghcr.yml  docker-compose.yml  mvp.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/actions/rust-setup/: action.yml
.github/actions/smoke-test/: action.yml
.github/workflows/: ci.yml  deploy-pages.yml  nightly.yml  release.yml  security.yml
backend/: Cargo.toml
backend/extensions/: spatial-extension-manifest.json
backend/src/: auth.rs  auth_routes.rs  config.rs  db.rs  http_errors.rs  import.rs  lib.rs  main.rs  mbtiles.rs  mbtiles.rs.bak  models.rs  password.rs  session_store.rs  test_routes.rs  tiles.rs  validation.rs
backend/tests/: api_tests.rs
docs/: auth.md  dev.md  index.html  internal.md  style.css
docs/dev/: behaviors.md  testing.md
frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/scripts/: ui_flow.mjs
frontend/src/: App.css  App.jsx  AuthContext.jsx  Init.jsx  Login.jsx  Preview.jsx  ProtectedRoute.jsx  api.js  auth.js  featureInspectorFormat.js  index.css  main.jsx  polling.js  previewFeatureProperties.js  utils.js
frontend/src/components/: NodeInspector.jsx
frontend/testdata/: sample_mvt.mbtiles  sample_png.mbtiles
frontend/tests/: auth-helper.js  auth.spec.js  fixtures.js  polling.spec.js  preview.spec.js  publish.spec.js  upload-formats.spec.js  upload.spec.js  zoom-limit.spec.js
frontend/tests/fixtures/: sample.geojson  sample.geojsonl
frontend/tests/unit/: featureInspectorFormat.test.js  polling.test.js  previewFeatureProperties.test.js  utils.test.js
scripts/: create_minimal_shapefile.sh  create_test_shapefile.py  dev.sh  install-hooks.sh  prepare_test_data.sh  ui_flow.mjs
scripts/ci/: check_spatial_extension_version.sh  fetch_tile.sh  generate_osm_tile_goldens.sh  smoke_test.sh
scripts/release/: package_bundle.sh  spatial_extension_artifact.sh
src/: db.rs  main.rs  models.rs  services.rs
src/models/: error.rs
src/services/: config.rs  tiles.rs  upload.rs
testdata/: monaco_roads.mbtiles  multi_layer_real.mbtiles  osm_cities.mbtiles  sample_mvt.mbtiles  sample_png.mbtiles
testdata/custom-crs/: README.md  complex_custom_crs.geojson  simple_custom_crs.geojson
testdata/osm_medium/: README.md
testdata/osm_medium/geojson/: sf_multilinestrings.geojson  sf_multipoints.geojson
testdata/smoke/: expected_sample_z0_x0_y0.mvt.base64  osm_tile_test_samples.json
tests/integration/: common.rs  mod.rs  observable_behavior_test.rs
(+6 files in other folders)
