[package]
name = "mapflow"
version = "0.1.0"
edition = "2021"
authors = ["MapFlow Team"]
description = "A high-performance map tile server with visual node editor"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
duckdb = { version = "1.0", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File handling
zip = "2"
uuid = { version = "1", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Geospatial
geo-types = "0.7"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart"] }
assert-json-diff = "2"
tempfile = "3"

[[bin]]
name = "mapflow"
path = "src/main.rs"
