[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
zip = "0.6"
hex = "0.4"
duckdb = { version = "1.4.4", features = ["bundled", "chrono"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
